Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52545

Qt Gui / QRgb64 code: Build warnings with Qt 5.6.0 (int conversion)

    XMLWordPrintable

Details

    Description

      The user downloaded Qt 5.6.0 for Windows from account.qt.io. As the best practice, all warnings are marked to be errors. Hence any tries to compile project with this SDK will fail. All warnings are coming from casting integers:

      Warning 2 warning C4242: 'argument' : conversion from 'uint' to 'quint8',
      possible loss of data C:\Qt\Qt5.6.0\5.6\msvc2013\include\QtGui\qrgba64.h 100 1
      Core
      Warning 3 warning C4242: 'return' : conversion from 'uint' to 'quint8',
      possible loss of data C:\Qt\Qt5.6.0\5.6\msvc2013\include\QtGui\qrgba64.h 121 1
      Core
      Warning 4 warning C4242: 'return' : conversion from 'uint' to 'quint8',
      possible loss of data C:\Qt\Qt5.6.0\5.6\msvc2013\include\QtGui\qrgba64.h 122 1
      Core
      Warning 5 warning C4242: 'return' : conversion from 'uint' to 'quint8',
      possible loss of data C:\Qt\Qt5.6.0\5.6\msvc2013\include\QtGui\qrgba64.h 123 1
      Core
      Warning 6 warning C4242: 'return' : conversion from 'uint' to 'quint8',
      possible loss of data C:\Qt\Qt5.6.0\5.6\msvc2013\include\QtGui\qrgba64.h 124 1
      Core
      

      The user is using MSVC 2013 on Windows 7.

      Downloaded package is qt-enterprise-windows-x86-msvc2013-5.6.0

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            dmnikola Dmitry Nikolaev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes