Avoid conversion warnings in qrgba64.h

Make implicit down conversions explicit to silence the most pedantic
of compiler warnings.

Task-number: QTBUG-52545
Change-Id: Id8f9574b47c8b4ee43023c80a3e009fab0e85008
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>